--- a/next-portfolio/app/[locale]/globals.css
+++ b/next-portfolio/app/[locale]/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@plugin 'tailwind-scrollbar';
 
 :root {
   --background: #ffffff;
@@ -23,7 +24,7 @@
   from {
     opacity: 0;
     transform: translateY(10px);
-  }
+  } 
   to {
     opacity: 1;
     transform: translateY(0);
@@ -42,4 +43,11 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+.modal-scroll {
+  scrollbar-width: none; /* Firefox */
+}
+.modal-scroll::-webkit-scrollbar {
+  display: none; /* Chrome */
 }
